# tars

./: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/runtime_auth/: error.rs  mod.rs  oauth_callback.rs  oauth_engine.rs  oauth_registry.rs  oauth_session.rs  secret_store.rs
src-tauri/src/runtime_auth/providers/: google.rs  google_oauth.rs  mod.rs  moonshot.rs  openai.rs  openai_oauth.rs  zhipu.rs
src/app/: AppProviders.tsx  router.tsx
src/components/runtime/: RuntimeAuthPanel.tsx  RuntimeList.tsx  RuntimeSelectionModal.tsx
src/components/startup/: StartupScreen.tsx
src/hooks/: useLocaleBootstrap.ts  useProjectActions.ts  useRuntimeBootstrap.ts  useWorkspaceBootstrap.ts
src/i18n/: localeOptions.ts  messages.ts  translate.ts  types.ts
src/pages/: SettingsPage.tsx  StartupPage.tsx  WorkspacePage.tsx
src/stores/: localeStore.ts  runtimeStore.ts  uiStore.ts  workspaceStore.ts
src/styles/: components.css  index.css  tokens.css
tests/setup/: vitest.setup.ts
tests/unit/: appStore.test.ts  clipboardClient.test.ts  dialogClient.test.ts  formatRelativeOpenedAt.test.ts  fsClient.test.ts  iconButton.test.tsx  isMacDesktop.test.ts  localeStore.test.ts  projectRepository.test.ts  queryClient.test.ts  runtimeAuthService.test.ts  runtimeRepository.test.ts  settingsPage.test.tsx  startupFlow.test.tsx  tauriCapability.test.ts  translate.test.ts  uiStore.test.ts  useProjectActions.test.tsx  workspaceShell.test.tsx  workspaceStore.test.ts
(+41 files in other folders)
